src/test/deca/context/invalid/testWrongTypeNew.deca
// Description : Utilisation de new sur un type autre que classe
{
    int a = new int();
}
